# arbah

./: .dockerignore  .env.example  .env.production  .flake8  .gitignore  .htaccess  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  deploy.sh  docker-compose.yml  passenger_wsgi.py  pyproject.toml  requirements-prod.txt  requirements.txt  start.sh
.github/workflows/: ci.yml  release.yml
arbah/: __init__.py  main.py
backend/: main.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/composables/: useApiStatus.ts  useQuotes.ts
frontend/src/config/: api.ts
frontend/src/services/: api.service.ts
frontend/src/styles/: _mixins.scss  _utilities.scss  _variables.scss  main.scss
src/arbah/: __init__.py  main.py
src/arbah/api/v1/: health.py  meta.py  quotes.py
src/arbah/config/: settings.py
src/arbah/services/: __init__.py  quote_service.py
src/arbah/utils/: __init__.py  exceptions.py  logger.py
src/quotes_api/: __init__.py  main.py
src/quotes_api/api/: __init__.py
src/quotes_api/api/v1/: __init__.py  health.py  meta.py  quotes.py
src/quotes_api/config/: __init__.py  settings.py
src/quotes_api/models/: __init__.py  quote.py
src/quotes_api/services/: quote_service.py
src/quotes_api/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_models.py  test_quote_service.py
